Source install opam

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ cache:
 
 addons:
   apt:
-    packages:
-    - opam
+    source:
+     - opam
+#    packages:
 #    - haskell-platform
 #    - cabal-install
 
