--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
 
 install:
  - export PATH="$HOME/cache/.cabal-sandbox/bin:$PATH"
- - rm -rf $HOME/cache
+# - rm -rf $HOME/cache
  - mkdir -p "$HOME/cache"
  - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
  - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install cabal-install && cabal install alex); fi
