--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
-*.vo
-*.glob
-*.v.d
-*~
-*.aux
-*.o
-*.cmi
-*.cmxs
-*.cmx
-*.exe.stackdump
-
+*#*#
 *.agdai
-*.v#
-*.agda#
+*.aux
+*.cmi
+*.cmx
+*.cmxs
+*.exe.stackdump
+*.glob
 *.jpg
-*.html
-internal/html/Agda.css
+*.o
+*.v.d
+*.vo
+*~
+/internal/html
+Makefile.coq
