--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
  directories:
   - $HOME/cache
   - $HOME/.opam
+  - $HOME/.cabal
 
 addons:
   apt:
@@ -25,12 +26,15 @@ env:
   - AGDA=""     INTERNAL_COQ=""     AXIOMATIZATION="yes"
 
 install:
- - export PATH="$HOME/cache/.cabal-sandbox/bin:$PATH"
+ - export PATH="$HOME/.cabal/bin:$PATH"
 # - rm -rf $HOME/cache
  - mkdir -p "$HOME/cache"
- - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
- - if [ ! -z "$AGDA" ]; then cabal install cabal-install && cabal install alex; fi
- - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install Agda-$AGDA); fi
+ - cat $HOME/.cabal/config
+# - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
+ - if [ ! -z "$AGDA" ]; then cabal update; fi
+ - if [ ! -z "$AGDA" ]; then cabal install cabal-install; fi
+# - if [ ! -z "$AGDA" ]; then cabal install alex; fi
+ - if [ ! -z "$AGDA" ]; then cabal install Agda-$AGDA; fi
 
 
 before_script:
