Soruces is for ppas, not packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ cache:
 addons:
   apt:
     sources:
+     - ppa:avsm/ppa
+    packages:
      - opam
-#    packages:
 #    - haskell-platform
 #    - cabal-install
 
