--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,14 @@ install:
 
 before_script:
  - uname -a
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then (cd "$HOME/cache" && opam update); fi
-# - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then (cd "$HOME/cache" && opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev); fi
-# - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then (cd "$HOME/cache" && opam repo add coq-released https://coq.inria.fr/opam/released); fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then (cd "$HOME/cache" && opam list && opam install -j4 -v coq.8.5~beta1); fi
-# - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then (cd "$HOME/cache" && opam list && opam install -j4 -v coq:template-coq.1.0.0~beta2); fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" -a ! -d "$HOME/.opam" ]; then opam init; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam update; fi
+# - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev; fi
+# - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-released https://coq.inria.fr/opam/released; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -j4 -v coq.8.5~beta1; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list; fi
+# - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -j4 -v coq:template-coq.1.0.0~beta2; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list; fi
 
 script: false
