--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
 # - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
  - if [ ! -z "$AGDA" ]; then cabal update; fi
  - if [ ! -z "$AGDA" ]; then cabal install cabal-install; fi
-# - if [ ! -z "$AGDA" ]; then cabal install alex; fi
+ - if [ ! -z "$AGDA" ]; then cabal install alex; fi
  - if [ ! -z "$AGDA" ]; then cabal install Agda-$AGDA; fi
 
 
