--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ cache:
  directories:
   - $HOME/cache
   - $HOME/.opam
-  - $HOME/.cabal
 
 addons:
   apt:
@@ -31,13 +30,13 @@ install:
 # - rm -rf $HOME/cache
  - mkdir -p "$HOME/cache"
  - cat $HOME/.cabal/config
-# - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
+ - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
  - if [ ! -z "$AGDA" ]; then cabal update; fi
- - if [ ! -z "$AGDA" ]; then cabal install cabal-install; fi
- - if [ ! -z "$AGDA" ]; then cabal install alex; fi
- - if [ ! -z "$AGDA" ]; then cabal install happy; fi
- - if [ ! -z "$AGDA" ]; then cabal install haskell-src-exts; fi
- - if [ ! -z "$AGDA" ]; then cabal install Agda-$AGDA; fi
+# - if [ ! -z "$AGDA" ]; then cabal install cabal-install; fi
+# - if [ ! -z "$AGDA" ]; then cabal install alex; fi
+ - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install happy); fi
+# - if [ ! -z "$AGDA" ]; then cabal install haskell-src-exts; fi
+ - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install Agda-$AGDA); fi
 
 
 before_script:
