Added a note about happy

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
  - if [ ! -z "$AGDA" ]; then cabal update; fi
 # - if [ ! -z "$AGDA" ]; then cabal install cabal-install; fi
 # - if [ ! -z "$AGDA" ]; then cabal install alex; fi
- - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install happy); fi
+ - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install happy); fi # https://github.com/SublimeHaskell/SublimeHaskell/issues/184
 # - if [ ! -z "$AGDA" ]; then cabal install haskell-src-exts; fi
  - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install Agda-$AGDA); fi
 
