--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,9 @@ before_script:
  - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev; fi
  - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-released https://coq.inria.fr/opam/released; fi
  - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -j4 -v coq.8.5~beta1; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -y -j4 -v coq.8.5~beta1; fi
  - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -j4 -v coq:template-coq.1.0.0~beta2; fi
+ - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -y -j4 -v coq:template-coq.1.0.0~beta2; fi
  - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
  - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then eval `opam config env`; fi
 
