--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
  - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
  - if [ ! -z "$AGDA" ]; then cabal update; fi
 # - if [ ! -z "$AGDA" ]; then cabal install cabal-install; fi
-# - if [ ! -z "$AGDA" ]; then cabal install alex; fi
+ - if [ ! -z "$AGDA" ]; then cabal install alex; fi
  - if [ ! -z "$AGDA" ]; then cabal install happy; fi # https://github.com/SublimeHaskell/SublimeHaskell/issues/184
 # - if [ ! -z "$AGDA" ]; then cabal install haskell-src-exts; fi
  - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install Agda-$AGDA); fi
