--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ addons:
 
 env:
  matrix:
-  - AGDA="2.4.2.3"  INTERNAL_COQ=""     AXIOMATIZATION=""    TARGETS="agda"
-  - AGDA=""         INTERNAL_COQ="yes"  AXIOMATIZATION=""    TARGETS="coq"
-  - AGDA=""         INTERNAL_COQ=""     AXIOMATIZATION="yes" TARGETS="coq-axiomatization"
+  - AGDA="2.4.2.3"  COQ="yes" TARGETS="agda"
+  - AGDA="2.4.2.3"  COQ="yes" TARGETS="coq"
+  - AGDA="2.4.2.3"  COQ="yes" TARGETS="coq-axiomatization"
 
 install:
  - export PATH="$HOME/cache/.cabal-sandbox/bin:$HOME/.cabal/bin:$PATH"
@@ -37,18 +37,18 @@ install:
 
 before_script:
  - uname -a
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam init --auto-setup; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam update; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev || true; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-released https://coq.inria.fr/opam/released || true; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then eval `opam config env`; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then coqc -v || true; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then echo | coqtop || true; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -y -j4 -v coq.8.5~beta1; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -y -j4 -v coq:template-coq.1.0.0~beta2; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
- - if [ ! -z "$AXIOMATIZATION$INTERNAL_COQ" ]; then eval `opam config env`; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam init --auto-setup; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam update; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-core-dev https://coq.inria.fr/opam/core-dev || true; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam repo add coq-released https://coq.inria.fr/opam/released || true; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then eval `opam config env`; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then coqc -v || true; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then echo | coqtop || true; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -y -j4 -v coq.8.5~beta1; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam install -y -j4 -v coq:template-coq.1.0.0~beta2; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then opam list -a; fi
+ - if [ ! -z "1$AXIOMATIZATION$INTERNAL_COQ" ]; then eval `opam config env`; fi
 
 script: make $TARGETS
