Don't install Coq when running Agda
(It's quicker this way)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
 
 env:
  matrix:
-  - AGDA="2.4.2.3"  COQ="yes" TARGETS="agda"
+  - AGDA="2.4.2.3"  COQ=""    TARGETS="agda"
   - AGDA="2.4.2.3"  COQ="yes" TARGETS="coq"
   - AGDA="2.4.2.3"  COQ="yes" TARGETS="coq-axiomatization"
 
