Add a small implementation of Lӧb's theorem
This shows that any extension of the given syntax which supports an
interpreter into the universe cannot also have a quoted interpreter.
Alternatively, for any fragment of a syntax that you can interpret
into the universe, that fragment cannot contain a quoted interpreter
for the entire syntax.

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -31,6 +31,7 @@ all: agda coq
 
 agda:
 	agda -i . --html lob.agda
+	agda -i . --html mini-lob.agda
 
 Makefile.coq: Makefile _CoqProject
 	$(VECHO) "COQ_MAKEFILE -f _CoqProject > $@"
