--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ install:
  - cat $HOME/.cabal/config
  - if [ ! -z "$AGDA" -a ! -d "$HOME/cache/.cabal-sandbox" ]; then (cd "$HOME/cache" && cabal sandbox init); fi
  - if [ ! -z "$AGDA" ]; then cabal update; fi
+ - if [ ! -z "$AGDA" ]; then cabal install 'cpphs <1.20'; fi
  - if [ ! -z "$AGDA" ]; then cabal install alex; fi
  - if [ ! -z "$AGDA" ]; then cabal install happy; fi # https://github.com/SublimeHaskell/SublimeHaskell/issues/184
  - if [ ! -z "$AGDA" ]; then (cd "$HOME/cache" && cabal install Agda-$AGDA); fi
@@ -48,7 +49,7 @@ before_script:
  - if [ ! -z "$COQ" ]; then echo | coqtop || true; fi
  - if [ ! -z "$COQ" ]; then opam install -y -j4 -v coq.8.5~beta2; fi
  - if [ ! -z "$COQ" ]; then opam list -a; fi
- - if [ ! -z "$COQ" ]; then opam install -y -j4 -v coq:template-coq.1.0.0~beta2; fi
+ - if [ ! -z "$COQ" ]; then opam install -y -j4 -v coq-template-coq.1.0.0~beta2; fi
  - if [ ! -z "$COQ" ]; then opam list -a; fi
  - if [ ! -z "$COQ" ]; then eval `opam config env`; fi
 
